# thunder-buddy-backend

./: .env  .env.ci  .envrc  .flake8  .gitignore  .prettierrc.yml  .pylintrc  .pylintrc.bak  .yamllint  .yamllint.yml  DEVELOPMENT.md  Dockerfile  Makefile  NewDbSetup.py  README.md  bash_commands.txt  dev.bat  dev.sh  diff  docker-compose.dev.yml  docker-compose.yml  generated_users.json  keys.txt  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  rebuild-dev.bat  rebuild-dev.sh  rebuild.sh  requirements.txt  restart-dev.bat  restart-dev.sh  restart.sh  run.py  seed.py  setup.cfg  setup.py  start.bat  start.ps1  (+6 more)
.github/actions/deploy/: action.yml
.github/actions/docker-build/: action.yml
.github/actions/ec2-deploy/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  deploy.yml  security-check.yml  swagger-gen.yml
app/: __init__.py  config.py  extensions.py  utils.py
app/Controllers/: friendshipController.py  groupController.py  notificationController.py  userAccountController.py
app/Models/: friendshipModel.py  groupModel.py  notificationModel.py  userAccountModel.py
app/Routes/: devRoute.py  friendshipRoute.py  groupRoute.py  notificationRoute.py  userAccountRoute.py
docker/db/: init.sql
models/: models.py
routes/: test_routes.py  user_routes.py  weather_routes.py
scripts/: build-local.sh  db.py  deploy.sh  dev_seed.py  generate_swagger.py  init_db_user.py  install-hooks.ps1  install-hooks.sh  run_with_watchdog.py  startup.sh  test_db_connection.py
scripts/db/init/: 01-init-db.sql  01-init.sql  02-create-tables.sql
scripts/shell/: dev.ps1  dev.sh  rebuild-dev.bat  rebuild-dev.ps1  rebuild-dev.sh  rebuild.bat  rebuild.ps1  rebuild.sh  requirements.txt  restart-dev.bat  restart-dev.ps1  restart-dev.sh  restart.bat  restart.ps1  restart.sh  start-dev.bat  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
static/: swagger.json  swagger.yaml
tests/: conftest.py  skip_jwt_tests.py  test_dev_endpoints.py
tests/integration/: test_app_integration.py  test_db_integration.py
tests/unit/: test_base.py  test_db_connection.py  test_friendship.py  test_friendship_route.py  test_main.py  test_run.py  test_user_account.py  test_user_account_controller.py  test_user_account_route.py  test_utils.py
