[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thunder-buddy"
version = "0.1.0"
authors = [
    { name = "Thunder Buddy Team" },
]
description = "Thunder Buddy Backend"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.1.0",
    "flask-swagger-ui>=4.11.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.28",
    "pyyaml>=6.0.1",
]

[tool.setuptools]
packages = ["scripts"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | \.eggs
  | \.tox
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "venv", ".venv", "env", "build", "dist"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "venv", ".venv", "env", "build", "dist", "__pycache__", "*.pyc", "*.egg-info"] 